--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Enter the end: <br>
             <input id="end" type=number> <br>
             Enter the step: <br>
-            <input id="step" type=number min="1"> <br><br>
+            <input id="step" type=number> <br><br>
         </form>
         <button onclick="calcfunction()">Submit</button>
 
