--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             <input id="step" type=number> <br><br>
         </form>
         <button onclick="calcfunction()">Submit</button>
-
-        <h3>The Program Output</h3>
+         <h3>The Program Output</h3>
         <span>___________________________________________________</span>
         <p id="display1"></p>
         <p id="display2"></p>
@@ -23,4 +22,4 @@
         <span>___________________________________________________</span>
     </body>
     <script src="script.js"></script>
-</html>
+</html
